@@ -1,7 +1,7 @@
 #!/usr/bin/python -OO
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.149 2006/04/04 16:08:11 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.150 2006/04/18 20:59:12 wolf31o2 Exp $
 
 # Maintained in full by:
 # Eric Edgar <rocket@gentoo.org>
@@ -11,7 +11,7 @@ import os,sys,imp,string,getopt
 import pdb
 
 __maintainer__="Chris Gianelloni <wolf31o2@gentoo.org>"
-__version__="2.0_rc41"
+__version__="2.0_rc42"
 
 conf_values={}
 
